--- a/miniprogram/components/barrage-sender/animations.wxss
+++ b/miniprogram/components/barrage-sender/animations.wxss
@@ -1,12 +1,32 @@
 /* letter */
-@keyframes new {
-  0% {
-    left: 0%;
-    margin-left: -1500px;
+
+@keyframes bounceInLeft {
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
   }
-  100% {
-    left: 50%;
-    margin-left: -42%;
+
+  0% {
+    transform: translate3d(-3000px, 0, 0);
+  }
+
+  60% {
+    transform: translate3d(25px, 0, 0);
+  }
+
+  75% {
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  90% {
+    transform: translate3d(5px, 0, 0);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
   }
 }
 @keyframes open {
