--- a/miniprogram/components/barrage-sender/barrage-sender.wxss
+++ b/miniprogram/components/barrage-sender/barrage-sender.wxss
@@ -254,7 +254,7 @@
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: #79a8a9;
+  background-color: #fcc72e;
   animation: animate 0.5s linear infinite;
   border-radius: 3px;
 }
@@ -264,7 +264,7 @@
 }
 
 .envelope.new {
-  animation: new 1s forwards;
+  animation: bounceInLeft 1s forwards;
 }
 .envelope.open {
   animation: open 3s forwards;
