--- a/miniprogram/pages/barrage/barrage.wxss
+++ b/miniprogram/pages/barrage/barrage.wxss
@@ -1,3 +1,5 @@
+@import "./animations.wxss";
+
 .barrage-page-wrapper {
   position: relative;
   height: 100%;
@@ -29,6 +31,7 @@
   margin: 0 auto;
   position: relative;
   box-shadow: 0 80rpx 60rpx -60rpx rgba(0,0,0,0.4);
+  animation: bounceInDown 1s forwards;
 }
 
 .monitor {
