--- a/miniprogram/components/cheatsheet/cheatsheet.wxss
+++ b/miniprogram/components/cheatsheet/cheatsheet.wxss
@@ -1,1 +1,12 @@
 /* components/cheatsheet.wxss */
+@import '../../style/smartisan-note';
+
+.cheatsheet-wrapper {
+    z-index: 8;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 85%;
+    height: 85%;
+    transform: translate(-50%, -50%);
+}
