feat: 优化若干细节

--- a/miniprogram/components/cheatsheet/cheatsheet.wxml
+++ b/miniprogram/components/cheatsheet/cheatsheet.wxml
@@ -1,4 +1,4 @@
-<view class="cheatsheet-wrapper cover-content">
+<view class="cheatsheet-wrapper cover-content animated bounce">
     <view class="content-inside">
         <view class="content-border">
         <view class="corner corner-top-left"></view>
