--- a/miniprogram/components/cheatsheet/cheatsheet.wxss
+++ b/miniprogram/components/cheatsheet/cheatsheet.wxss
@@ -1,4 +1,5 @@
 /* components/cheatsheet.wxss */
+@import "../../style/animate.wxss";
 @import '../../style/smartisan-note';
 
 .cheatsheet-wrapper {
