--- a/miniprogram/components/terminal/terminal.wxss
+++ b/miniprogram/components/terminal/terminal.wxss
@@ -145,6 +145,30 @@
   color: rgb(176, 70, 178);
 }
 
+/* 文本展示类型 */
+.text-list-cmd .des {
+  font-size: 32rpx;
+  font-weight: 700;
+}
+
+.text-list-cmd .addition-des {
+  font-size: 28rpx;
+  font-weight: 400;
+}
+
+.text-list-cmd .list-item {
+  padding: 10rpx 0;
+}
+
+.text-list-cmd .list-item .cmd-des {
+  margin-left: 10rpx;
+  font-size: 28rpx;
+  text-decoration: underline;
+  color: rgb(66, 152, 175);
+}
+
+
+
 .input-area {
   margin: 0 -10px;
 }
