--- a/miniprogram/components/invitation/invitation.wxml
+++ b/miniprogram/components/invitation/invitation.wxml
@@ -14,7 +14,7 @@
                 <view class="content-info-flex">
                   <view class="phrase">雷佳良 & 范默苒</view>
                   <view class="phrase">{{date}}</view>
-                  <view class="phrase" bind:tap="navToMapPage">
+                  <view style="text-decoration: underline;" class="phrase {{isOpening ? 'dely1 repeat6 animated pulse' : ''}}" bind:tap="navToMapPage">
                     <text class="block-text">好运来（华林国际）</text>
                     <text class="block-text">金色大厅</text>
                   </view>
@@ -23,7 +23,7 @@
               <!-- 需要使用 button 来授权登录 -->
               <button 
                 wx:if="{{canIUse}}"
-                class="wish-btn-wrapper" 
+                class="wish-btn-wrapper {{ isOpening ? 'dely1 animated rotateIn' : '' }} " 
                 open-type="getUserInfo" 
                 bindgetuserinfo="bindGetUserInfo"><image class="btn-icon" src="../../images/flower.png" /></button>
               <view wx:else>请升级微信版本后发送祝福</view>
