--- a/miniprogram/pages/map/map.wxss
+++ b/miniprogram/pages/map/map.wxss
@@ -1,5 +1,12 @@
 
 .map-ele {
   width: 100%;
-  height: 75%;
+  height: 100%;
+}
+
+.opts-wrapper {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
